Bug 1020661 followup: only attempt to disable -Wunused-local-typedefs (in a WebRTC header) on GCC >= 4.8. r=jesup