media/webrtc/trunk/webrtc/system_wrappers/interface/scoped_ptr.h
@@ -112,13 +112,16 @@
 
 // XXX This file creates unused typedefs as a way of doing static assertions,
 // both via COMPILE_ASSERT and via direct typedefs like
-// 'type_must_be_complete'. These trigger a GCC warning, which we disable here.
+// 'type_must_be_complete'. These trigger a GCC warning (enabled by -Wall in
+// GCC 4.8 and above) which we disable here, just for this file, for GCC > 4.8.
 // This can be removed if & when this file (and COMPILE_ASSERT) stops using
 // these typedefs.
-#if defined(__GNUC__) && !defined(__clang__)
+#if defined(__GNUC__)
+#if !defined(__clang__) && ((__GNUC__ > 4) || (__GNUC__ == 4 && __GNUC_MINOR__ >= 8))
 #pragma GCC diagnostic push
 #pragma GCC diagnostic ignored "-Wunused-local-typedefs"
-#endif // defined(__GNUC__) && !defined(__clang__)
+#endif // not clang, and version >= 4.8
+#endif // GCC or clang
 
 namespace webrtc {
 
@@ -723,8 +726,10 @@ void swap(scoped_ptr_malloc<T,FF>& a, scoped_ptr_malloc<T,FF>& b) {
 }  // namespace webrtc
 
 // Pop off 'ignored "-Wunused-local-typedefs"':
-#if defined(__GNUC__) && !defined(__clang__)
+#if defined(__GNUC__)
+#if !defined(__clang__) && ((__GNUC__ > 4) || (__GNUC__ == 4 && __GNUC_MINOR__ >= 8))
 #pragma GCC diagnostic pop
-#endif // defined(__GNUC__) && !defined(__clang__)
+#endif // not clang, and version >= 4.8
+#endif // GCC or clang
 
 #endif  // WEBRTC_SYSTEM_WRAPPERS_INTERFACE_SCOPED_PTR_H_
